DBC22-1662: Fix spacing in advisory/bulletins

--- a/src/frontend/src/App.scss
+++ b/src/frontend/src/App.scss
@@ -32,7 +32,7 @@ body {
       display: flex;
 
       .friendly-time, .formatted-date {
-        margin-left: 1ch;
+        margin-left: 0.5ch;
       }
     }
   }
